Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,32 +28,40 @@
         </ul>
       </header>
       <section>
-        <h3>Welcome to GitHub Pages.</h3>
+        <p>In my application I propose to introduce Object/Pattern tracking into CCV in which the object/pattern to be tracked can be completely defined by the user.</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>The deliverables of this project will be:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<ol>
+<li> A tool for selection of templates, where user can select the particular template to match</li>
+<li> Template matching integrated into CCV.</li>
+<li> Making an MT application to get and send data over Bluetooth/ Wi-Fi network.</li>
+<li> Application for demonstration. Where you can transfer images from your MT screen to device just by moving it into the device region on the screen. This will be one use out of many, but will be the best for demonstration purpose. </li>
+</ol><p><br><br><img src="http://db.tt/JBB783zQ" alt="Demo"><br></p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<hr><p><br>
+Changelog (after CCV-COT):<br></p>
 
-<h3>Designer Templates</h3>
+<ul>
+<li>Complete Fiducial Support (Integration of ofxFiducialFinder addon by Alain Ramos).</li>
+<li>TUIO XML messages bug solved.</li>
+<li>CCV Debug mode</li>
+<li>Different Filter chain and controls for Fiducial and Object/Fingers.</li>
+<li>Fiducial settings on config.xml file.</li>
+<li>Object acceleration calculations included.</li>
+<li>Removal and inclusion of some keyboard controls.</li>
+<li>Closing of application from the “X” button,minimizing the application.</li>
+<li>Changes in GUI</li>
+<li>Blob counter for Finger, Fiducials and Objects respectively.</li>
+<li>Sample AS3 app to test Custom Object Tracker(COT) added.</li>
+</ul><p><br>
+Originally hosted <a href="https://code.google.com/p/google-summer-of-code-2010-nui-group/downloads/list">here</a>
+<br></p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<hr><p>GSoC 2010 project
+<br><a href="http://www.google-melange.com/gsoc/homepage/google/gsoc2010"><img src="http://db.tt/3SNsY3Nv" alt="GSoC 2010"></a>
+<br><strong>Student:</strong> Amit Kumar Sarangi 
+<br><strong>Mentor:</strong> Christian Moore</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/nuigroup">nuigroup</a></p>
